browser/components/aboutlogins/content/components/confirmation-dialog.css
.
overlay
{
position
:
fixed
;
z
-
index
:
1
;
top
:
0
;
bottom
:
0
;
left
:
0
;
right
:
0
;
background
-
color
:
rgba
(
0
0
0
0
.
5
)
;
display
:
flex
;
}
.
container
{
z
-
index
:
2
;
position
:
relative
;
display
:
flex
;
flex
-
direction
:
column
;
min
-
width
:
250px
;
max
-
width
:
500px
;
min
-
height
:
200px
;
margin
:
auto
;
background
:
var
(
-
-
in
-
content
-
page
-
background
)
;
color
:
var
(
-
-
in
-
content
-
page
-
color
)
;
box
-
shadow
:
var
(
-
-
shadow
-
30
)
;
}
.
title
{
font
-
size
:
1
.
5em
;
font
-
weight
:
normal
;
-
moz
-
user
-
select
:
none
;
margin
:
0
;
}
.
message
{
color
:
var
(
-
-
in
-
content
-
deemphasized
-
text
)
;
margin
-
bottom
:
0
;
}
button
.
dismiss
-
button
{
position
:
absolute
;
top
:
0
;
inset
-
inline
-
end
:
0
;
min
-
width
:
20px
;
min
-
height
:
20px
;
margin
:
16px
;
padding
:
0
;
background
:
url
(
chrome
:
/
/
global
/
skin
/
icons
/
close
.
svg
)
no
-
repeat
center
;
-
moz
-
context
-
properties
:
fill
fill
-
opacity
;
fill
:
currentColor
;
fill
-
opacity
:
0
;
}
.
warning
-
icon
{
-
moz
-
context
-
properties
:
fill
;
fill
:
currentColor
;
width
:
40px
;
height
:
40px
;
margin
:
16px
;
}
.
content
.
buttons
{
text
-
align
:
center
;
padding
:
16px
32px
;
}
.
buttons
{
display
:
flex
;
}
.
buttons
.
macosx
>
.
confirm
-
button
{
order
:
1
;
}
.
buttons
>
button
{
min
-
width
:
140px
;
}

