Bug 1575220 - Show the close icon in the confirmation-dialog in high contrast mode. r=MattN
Differential Revision: https://phabricator.services.mozilla.com/D47531

UltraBlame original commit: faaf976800c27b0f423a69deb5fd6a6dd557de98

--- a/browser/components/aboutlogins/content/components/confirmation-dialog.css
+++ b/browser/components/aboutlogins/content/components/confirmation-dialog.css
@@ -134,6 +134,12 @@ shadow
 30
 )
 ;
+outline
+:
+1px
+solid
+transparent
+;
 }
 .
 title
@@ -191,7 +197,6 @@ bottom
 0
 ;
 }
-button
 .
 dismiss
 -
@@ -233,29 +238,18 @@ padding
 :
 0
 ;
-background
-:
-url
-(
-chrome
-:
-/
-/
-global
-/
-skin
-/
-icons
-/
-close
-.
-svg
-)
-no
+line
 -
-repeat
-center
+height
+:
+0
 ;
+}
+.
+dismiss
+-
+icon
+{
 -
 moz
 -
